# superrogue

./: .gitignore  CMakeLists.txt  README.md  controller_logic.md  general_info.md  model-logic.md  sequence_graphs.md  state_machine.md  tests.sh  view-logic.md
docs/: architectural_drivers.md  composition.md  controller_logic.md  general_info.md  model-logic.md  roles_and_use_cases.md  sequence_graphs.md  state_machine.md  view-logic.md
src/: Boot.cpp  Boot.h  (+1 more)
src/Controller/: CMakeLists.txt  EventProvider.cpp  EventProvider.h  GameController.cpp  GameController.h  ModelViewDataConverter.cpp  ModelViewDataConverter.h
src/Controller/Events/: EmptyEvent.cpp  EmptyEvent.h  IEvent.cpp  IEvent.h
src/Controller/Events/Game/: ChangeItemModelEvent.cpp  ChangeItemModelEvent.h  ChangeWeaponModelEvent.cpp  ChangeWeaponModelEvent.h  ModelEvents.h  PotionModelEvent.cpp  PotionModelEvent.h  PunchBackModelEvent.cpp  PunchBackModelEvent.h  PunchForwardModelEvent.cpp  PunchForwardModelEvent.h  PunchLeftModelEvent.cpp  PunchLeftModelEvent.h  PunchRightModelEvent.cpp  PunchRightModelEvent.h  StepBackModelEvent.cpp  StepBackModelEvent.h  StepForwardModelEvent.cpp  StepForwardModelEvent.h  StepLeftModelEvent.cpp  StepLeftModelEvent.h  StepRightModelEvent.cpp  StepRightModelEvent.h  WaitModelEvent.cpp  WaitModelEvent.h
src/Controller/Events/UI/: MoveEquipmentDownEvent.cpp  MoveEquipmentDownEvent.h  MoveEquipmentUpEvent.cpp  MoveEquipmentUpEvent.h  MovePotionDownEvent.cpp  MovePotionDownEvent.h  MovePotionUpEvent.cpp  MovePotionUpEvent.h  UIEvents.h
src/Model/: CMakeLists.txt  EmptyEvent.cpp  EmptyEvent.h  IEvent.cpp  IEvent.h
src/Model/Exceptions/: exceptions.cpp  exceptions.h
src/Model/GameModel/: CMakeLists.txt  GameManager.cpp  GameManager.h  Generator.h  abstract.h  const.h  generation_utils.h  generator.h  values.h
src/Model/GameModel/Events/: ChangeItemModelEvent.cpp  ChangeItemModelEvent.h  ChangeWeaponModelEvent.cpp  ChangeWeaponModelEvent.h  ModelEvent.cpp  ModelEvent.h  PotionModelEvent.cpp  PotionModelEvent.h  PunchBackModelEvent.cpp  PunchBackModelEvent.h  PunchForwardModelEvent.cpp  PunchForwardModelEvent.h  PunchLeftModelEvent.cpp  PunchLeftModelEvent.h  PunchRightModelEvent.cpp  PunchRightModelEvent.h  StepBackModelEvent.cpp  StepBackModelEvent.h  StepForwardModelEvent.cpp  StepForwardModelEvent.h  StepLeftModelEvent.cpp  StepLeftModelEvent.h  StepRightModelEvent.cpp  StepRightModelEvent.h  WaitModelEvent.cpp  WaitModelEvent.h
src/Model/GameModel/GameObject/: Characteristics.cpp  Characteristics.h  IGameObject.cpp  IGameObject.h
src/Model/GameModel/GameObject/Character/: CharacterAction.h  Enemy.cpp  Enemy.h  ICharacter.cpp  ICharacter.h  IConfusionEnemy.cpp  IConfusionEnemy.h  IEnemy.cpp  IEnemy.h  IPerson.cpp  IPerson.h  Person.cpp  Person.h
src/Model/GameModel/GameObject/Character/Class/: ICharacterClass.cpp  ICharacterClass.h
src/Model/GameModel/GameObject/Character/Class/Enemy/: Agressive.cpp  Agressive.h  Coward.cpp  Coward.h  Flying.cpp  Flying.h  GreenHairReplicator.cpp  GreenHairReplicator.h  IEnemyClass.cpp  IEnemyClass.h  IReplicator.cpp  IReplicator.h  Indifferent.cpp  Indifferent.h  Ordinary.cpp  Ordinary.h  RedHairReplicator.cpp  RedHairReplicator.h  Replicator.cpp  Replicator.h  Traveler.cpp  Traveler.h
src/Model/GameModel/GameObject/Character/Class/Enemy/state/: EnemyEnvironmentInfo.h  EnemyState.cpp  EnemyState.h  behaviors.cpp  behaviors.h  helpers.cpp  helpers.h
src/Model/GameModel/GameObject/Character/Class/Person/: Alchemist.cpp  Alchemist.h  Farsighted.cpp  Farsighted.h  IPersonClass.h  Lucky.cpp  Lucky.h  Secretive.cpp  Secretive.h  Wise.cpp  Wise.h
src/Model/GameModel/GameObject/Character/Generation/: AbstractEnemyFactory.cpp  AbstractEnemyFactory.h  FantasyEnemyFactory.cpp  FantasyEnemyFactory.h
src/Model/GameModel/GameObject/Item/: IItem.cpp  IItem.h
src/Model/GameModel/GameObject/Item/Generation/: ItemGenerator.cpp  ItemGenerator.h
src/Model/GameModel/GameObject/Item/Potions/: Potion.cpp  Potion.h  PotionType.h
src/Model/GameModel/GameObject/Item/Stuff/: Item.cpp  Item.h  StuffType.h
src/Model/GameModel/Inventory/: Inventory.cpp  Inventory.h
src/Model/GameModel/Manipulators/: VisibilityBuilder.cpp  VisibilityBuilder.h  WorldManipulator.cpp  WorldManipulator.h
src/Model/GameModel/Map/: Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.h  MapOptions.h  World.cpp  World.h
src/Model/GameModel/Map/Generator/: MapBuilder.cpp  MapBuilder.h  MapGenerator.h
src/Model/GameModel/Map/Generator/FileGenerating/: FileGenerator.cpp  FileGenerator.h  FileReader.cpp  FileReader.h  MapEntityProvider.cpp  MapEntityProvider.h
src/Model/GameModel/Map/Generator/RandomGenerating/: BinaryTreeMazeGenerator.cpp  BinaryTreeMazeGenerator.h  MazeGenerator.cpp  MazeGenerator.h
src/Model/UIModel/: CMakeLists.txt  CursorState.cpp  CursorState.h
src/Model/UIModel/Events/: ActionUIEvent.h  MoveEquipmentDownEvent.cpp  MoveEquipmentDownEvent.h  MoveEquipmentUpEvent.cpp  MoveEquipmentUpEvent.h  MovePotionDownEvent.cpp  MovePotionDownEvent.h  MovePotionUpEvent.cpp  MovePotionUpEvent.h  UIEvent.cpp  UIEvent.h
src/Model/config/: MapReader.cpp  MapReader.h
src/Model/map/: MapProvider.cpp  MapProvider.h
tests/: CMakeLists.txt  test.cpp
tests/Controller/: eventProviderTests.cpp
tests/Model/Exceptions/: exceptions.cpp
tests/Model/GameModel/: GameManager.cpp  generator.cpp  values.cpp
tests/Model/GameModel/GameObject/Character/: EnemyTests.cpp  PersonTests.cpp
tests/Model/GameModel/GameObject/Item/Potions/: PotionTests.cpp
tests/Model/GameModel/GameObject/Item/Stuff/: ItemTests.cpp
tests/Model/GameModel/Inventory/: Inventory.cpp
tests/Model/GameModel/Manipulators/: VisibilityBuilder.cpp
tests/Model/GameModel/Map/: Map.cpp  MapBuilder.cpp
tests/Model/GameModel/Map/Generator/: MazeGenerator.cpp
tests/Model/UIModel/: CursorStateTests.cpp
tests/Model/UIModel/Events/: MoveEquipmentDownEventTests.cpp  MoveEquipmentUpEventTests.cpp  MovePotionDownEventTests.cpp  MovePotionUpEventTests.cpp
tests/controller/: eventProviderTests.cpp
(+158 files in other folders)
