cmake_minimum_required(VERSION 3.11)

project(superrogue)

set(CMAKE_CXX_STANDARD 20)

include_directories("src")

set(TARGET_NAME "${PROJECT_NAME}")

find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})

add_executable(
    ${PROJECT_NAME}
    src/main.cpp
    src/exceptions/exceptions.cpp
    src/exceptions/exceptions.h
    src/controller/CursorState.cpp
    src/controller/CursorState.h
    src/controller/EventProvider.cpp
    src/controller/EventProvider.h
    src/controller/GameController.cpp
    src/controller/GameController.h
    src/controller/const.h
    src/controller/events/ModelEvent.cpp
    src/controller/events/UIEvent.h
    src/controller/events/UIEvent.cpp
    src/controller/events/IEvent.h
    src/controller/events/IEvent.cpp
    src/controller/events/ModelEvent.h
    src/controller/events/modelEvent/PunchForwardModelEvent.cpp
    src/controller/events/modelEvent/PunchRightModelEvent.cpp
    src/controller/events/modelEvent/ChangeItemModelEvent.h
    src/controller/events/modelEvent/WaitModelEvent.cpp
    src/controller/events/modelEvent/StepForwardModelEvent.cpp
    src/controller/events/modelEvent/PotionModelEvent.cpp
    src/controller/events/modelEvent/PunchBackModelEvent.h
    src/controller/events/modelEvent/WaitModelEvent.h
    src/controller/events/modelEvent/StepLeftModelEvent.cpp
    src/controller/events/modelEvent/ChangeItemModelEvent.cpp
    src/controller/events/modelEvent/StepLeftModelEvent.h
    src/controller/events/modelEvent/PunchLeftModelEvent.cpp
    src/controller/events/modelEvent/StepRightModelEvent.h
    src/controller/events/modelEvent/StepForwardModelEvent.h
    src/controller/events/modelEvent/PotionModelEvent.h
    src/controller/events/modelEvent/PunchForwardModelEvent.h
    src/controller/events/modelEvent/PunchBackModelEvent.cpp
    src/controller/events/modelEvent/StepBackModelEvent.cpp
    src/controller/events/modelEvent/PunchLeftModelEvent.h
    src/controller/events/modelEvent/StepBackModelEvent.h
    src/controller/events/modelEvent/PunchRightModelEvent.h
    src/controller/events/modelEvent/StepRightModelEvent.cpp
    src/controller/events/uiEvent/MovePotionUpEvent.cpp
    src/controller/events/uiEvent/MovePotionDownEvent.cpp
    src/controller/events/uiEvent/MoveEquipmentDownEvent.h
    src/controller/events/uiEvent/MoveEquipmentUpEvent.h
    src/controller/events/uiEvent/ActionUIEvent.h
    src/controller/events/uiEvent/MoveEquipmentDownEvent.cpp
    src/controller/events/uiEvent/MoveEquipmentUpEvent.cpp
    src/controller/events/uiEvent/MovePotionDownEvent.h
    src/controller/events/uiEvent/ActionUIEvent.cpp
    src/controller/events/uiEvent/MovePotionUpEvent.h
    src/controller/events/EmptyEvent.cpp
    src/model/abstract.h
    src/model/values.h
    src/model/GameManager.cpp
    src/model/GameManager.h
    src/model/generator.h
    src/model/const.h
    src/model/map/Map.h
    src/model/map/Map.cpp
    src/model/game_object/Characteristics.cpp
    src/model/game_object/Characteristics.h
    src/model/game_object/IGameObject.cpp
    src/model/game_object/IGameObject.h
    src/model/game_object/character/Person.h
    src/model/game_object/character/IEnemy.h
    src/model/game_object/character/ICharacter.cpp
    src/model/game_object/character/ICharacter.h
    src/model/game_object/character/Enemy.h
    src/model/game_object/character/IPerson.cpp
    src/model/game_object/character/CharacterAction.h
    src/model/game_object/character/Person.cpp
    src/model/game_object/character/IPerson.h
    src/model/game_object/character/Enemy.cpp
    src/model/game_object/character/IEnemy.cpp
    src/model/game_object/character/class/ICharacterClass.cpp
    src/model/game_object/character/class/ICharacterClass.h
    src/model/game_object/character/class/person/Lucky.h
    src/model/game_object/character/class/person/Farsighted.cpp
    src/model/game_object/character/class/person/Lucky.cpp
    src/model/game_object/character/class/person/Wise.cpp
    src/model/game_object/character/class/person/Secretive.h
    src/model/game_object/character/class/person/Wise.h
    src/model/game_object/character/class/person/Farsighted.h
    src/model/game_object/character/class/person/Alchemist.cpp
    src/model/game_object/character/class/person/Alchemist.h
    src/model/game_object/character/class/person/IPersonClass.h
    src/model/game_object/character/class/person/Secretive.cpp
    src/model/game_object/character/class/enemy/Indifferent.h
    src/model/game_object/character/class/enemy/Ordinary.cpp
    src/model/game_object/character/class/enemy/Indifferent.cpp
    src/model/game_object/character/class/enemy/IEnemyClass.h
    src/model/game_object/character/class/enemy/Agressive.h
    src/model/game_object/character/class/enemy/Flying.cpp
    src/model/game_object/character/class/enemy/Flying.h
    src/model/game_object/character/class/enemy/Traveler.cpp
    src/model/game_object/character/class/enemy/Traveler.h
    src/model/game_object/character/class/enemy/IEnemyClass.cpp
    src/model/game_object/character/class/enemy/Ordinary.h
    src/model/game_object/character/class/enemy/Agressive.cpp
    src/model/game_object/item/IItem.h
    src/model/game_object/item/IItem.cpp
    src/model/game_object/item/potions/Potion.h
    src/model/game_object/item/potions/PotionType.h
    src/model/game_object/item/potions/Potion.cpp
    src/model/game_object/item/stuff/StuffType.h
    src/model/game_object/item/stuff/Item.h
    src/model/game_object/item/stuff/Item.cpp
    src/model/inventory/Inventory.h
    src/model/inventory/Inventory.cpp
    src/view/Renderer.h
    src/view/const.h
    src/view/Renderer.cpp
    src/common/Ncurses/CursesAPI.cpp
    src/view/Curses/CursesRenderer.cpp
    src/view/Curses/CursesFactory.cpp
    src/view/Curses/CursesRenderer.h
    src/view/Curses/CursesFactory.h
    src/view/Converters/CharDataConverter.h
    src/view/Converters/CharDataConverter.cpp
    src/view/Converters/GameDataConverter.h
    src/Boot.cpp
)
target_link_libraries(${PROJECT_NAME} ${CURSES_LIBRARIES})
